--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@e2b/code-interpreter": "^1.5.1",
     "@hookform/resolvers": "^5.1.1",
     "@inngest/agent-kit": "^0.8.3",
+    "@monaco-editor/react": "^4.7.0",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -58,6 +59,7 @@
     "inngest": "^3.39.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "monaco-themes": "^0.4.5",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "prismjs": "^1.30.0",
