--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "inngest": "^3.39.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "prismjs": "^1.30.0",
